<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_Home">

    <fragment
        android:id="@+id/nav_Home"
        android:name="ca.sunshineboys.it.cropmanagementsystem.ui.Home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_airHumidity"
        android:name="ca.sunshineboys.it.cropmanagementsystem.ui.AirHumidity.AirHumidity"
        android:label="@string/menu_airhumid"
        tools:layout="@layout/fragment_airhumidity" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ca.sunshineboys.it.cropmanagementsystem.ui.CropTemperature.CropTemperature"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_croptemperature" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ca.sunshineboys.it.cropmanagementsystem.ui.SoilMoisture.SoilMoisture"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_soilmoisture" />

    <fragment
        android:id="@+id/nav_waterlevel"
        android:name="ca.sunshineboys.it.cropmanagementsystem.WaterLevelActivity"
        android:label="@string/waterlevel"
        tools:layout="@layout/water_level_fragment" />

    <fragment
        android:id="@+id/nav_autonomous"
        android:name="ca.sunshineboys.it.cropmanagementsystem.TaskSchedulerActivity"
        android:label="@string/taskscheduler"
        tools:layout="@layout/task_scheduler_fragment" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="ca.sunshineboys.it.cropmanagementsystem.SettingActivity"
        android:label="@string/settings"
        tools:layout="@layout/setting_fragment"/>


</navigation>