<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White">


    <EditText
        android:id="@+id/TSET"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/TSTV2"
        android:layout_width="200dp"
        android:layout_height="25dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="205dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="603dp"
        android:fontFamily="@font/poppinsbold"
        android:text="@string/TSTV2"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TSTV1"
        android:layout_width="260dp"
        android:layout_height="69dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="603dp"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:text="@string/TSTV1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/TSB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="302dp"
        android:layout_marginEnd="138dp"
        android:background="@color/purple_500"
        android:fontFamily="@font/poppinsdefault"
        android:text="@string/taskdone" />

    <FrameLayout
        android:id="@+id/progressBar"
        android:animateLayoutChanges="true"
        android:visibility="gone"
        android:alpha="0.4"
        android:background="#000000"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_gravity="center" />
    </FrameLayout>
</RelativeLayout>