<?xml version="1.0" encoding="utf-8"?>
<!--
Sivajan Manikavasagar (Team Leader) N01240148
Muhammad Qamar N01344609
Noha Philips N01351336
Tanvir Pahwa N01245843
CENG 322 - RNC/D
CENG 317 - 0NF
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/HomePageColour"
    tools:context=".ui.AirHumidity.AirHumidity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_sensorinfo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="46dp"
        android:layout_marginStart="34dp"
        android:src="@drawable/windlogo" />

    <Button
        android:id="@+id/airHumidityButton"
        android:layout_width="216dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="570dp"
        android:text="@string/remeasure_air_humidity" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_sensorbox"
        android:layout_marginTop="210dp"/>

    <ImageView
        android:layout_width="305dp"
        android:layout_height="280dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="255dp"
        android:src="@drawable/ic_vectorcircle" />

    <ProgressBar
        android:id="@+id/progressBarAirHumid"
        android:layout_width="315dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="510dp"
        android:progress="80" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="310dp"
        android:layout_marginTop="530dp"
        android:text="@string/humid"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="530dp"
        android:text="@string/dry"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/humidityLevelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="125dp"
        android:layout_marginTop="340dp"
        android:fontFamily="@font/poppinsdefault"
        android:gravity="center"
        android:text="@string/_80placeholder"
        android:textColor="@color/DefaultTitleText"
        android:textSize="90dp" />

</RelativeLayout>